fix_columns: restore natural DOM order on mobile (text before image)

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -9,14 +9,6 @@
   border-radius: 20px;
 }
 
-.columns > div > div {
-  order: 1;
-}
-
-.columns > div > .columns-img-col {
-  order: 0;
-}
-
 .columns > div > .columns-img-col img {
   display: block;
 }
